fixed gap on about page

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -216,17 +216,15 @@
 }
 
 /* ABOUT 2025 */
-  .container-about {
+  /* .container-about {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    /* grid-template-rows: 200px 100px; */
-    /* flex-wrap: wrap; Allows content to wrap to the next line if needed */
-    gap: 1rem; /* Adds space between sections */
-    justify-content: center; /* Centers content horizontally */
+    gap: 62px; 
+    justify-content: center;
     padding: 2rem;
     width: 100%;
     max-width: 1200px;
-}
+} */
 
 .logistics-section {
     display: flex;
@@ -1101,10 +1099,8 @@ hr {
 .container-about {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    /* grid-template-rows: 200px 100px; */
-    /* flex-wrap: wrap; Allows content to wrap to the next line if needed */
-    gap: 1rem; /* Adds space between sections */
-    justify-content: center; /* Centers content horizontally */
+    gap: 62px;
+    justify-content: center; 
     padding: 2rem;
     width: 100%;
     max-width: 1200px;
